# ld40-squared

./: .gitignore  CMakeLists.txt  README.md  ld40  makefile  release.bat
data/: empty.txt  gameover.bm  map0.txt  map1.txt  map3.txt  scores.txt  square.bm
data/logo/: a.bm  d.bm  e.bm  q.bm  r.bm  s.bm  u.bm
res/: scores.txt
res/levels/: map2.txt
src/: main.c  main.h  maths.c  maths.h
src/gamestates/game/: game.c  game.h  map.c  map.h  square.c  square.h
src/gamestates/menu/: menu.c  menu.h  score.c  score.h
